--- a/src/components/ProgramCard.astro
+++ b/src/components/ProgramCard.astro
@@ -46,6 +46,7 @@ if (!images[imagePath])
     >
     </div>
   </div>
+  {link && (
   <a
     href={link}
     target="_self"
@@ -59,4 +60,5 @@ if (!images[imagePath])
       </p>
     </div>
   </a>
+  )}
 </div>
